fix: remove overflow-x hidden from server page

--- a/src/styles/pages/_server.scss
+++ b/src/styles/pages/_server.scss
@@ -4,7 +4,6 @@
   height: 100%;
   gap: 1rem;
   max-width: 100%;
-  overflow-x: hidden;
 }
 
 .server-header {
